--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -119,6 +119,10 @@
     transition: right 0.3s ease;
   }
 
+  .socialDropdown {
+    display: none;
+  }
+
   .menuItems.active {
     right: 0;
   }
